管理员模块完善

--- a/管理员系统框架.html
+++ b/管理员系统框架.html
@@ -92,7 +92,7 @@
                   <div id="u29" class="ax_default _默认样式">
                     <div id="u29_div" class=""></div>
                     <div id="u29_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -136,7 +136,7 @@
                   <div id="u34" class="ax_default _默认样式">
                     <div id="u34_div" class=""></div>
                     <div id="u34_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -160,7 +160,7 @@
                   <div id="u37" class="ax_default _默认样式">
                     <div id="u37_div" class=""></div>
                     <div id="u37_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -204,7 +204,7 @@
                   <div id="u42" class="ax_default _默认样式">
                     <div id="u42_div" class=""></div>
                     <div id="u42_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -228,7 +228,7 @@
                   <div id="u45" class="ax_default _默认样式">
                     <div id="u45_div" class=""></div>
                     <div id="u45_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -272,7 +272,7 @@
                   <div id="u50" class="ax_default _默认样式">
                     <div id="u50_div" class=""></div>
                     <div id="u50_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -296,7 +296,7 @@
                   <div id="u53" class="ax_default _默认样式">
                     <div id="u53_div" class=""></div>
                     <div id="u53_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -340,7 +340,7 @@
                   <div id="u58" class="ax_default _默认样式">
                     <div id="u58_div" class=""></div>
                     <div id="u58_text" class="text ">
-                      <p style="font-size:12px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
+                      <p style="font-size:12px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">用户管理</span></p>
                     </div>
                   </div>
 
@@ -368,7 +368,7 @@
                   <div id="u61" class="ax_default _默认样式">
                     <div id="u61_div" class=""></div>
                     <div id="u61_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -412,7 +412,7 @@
                   <div id="u66" class="ax_default _默认样式">
                     <div id="u66_div" class=""></div>
                     <div id="u66_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -436,7 +436,7 @@
                   <div id="u69" class="ax_default _默认样式">
                     <div id="u69_div" class=""></div>
                     <div id="u69_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -480,7 +480,7 @@
                   <div id="u74" class="ax_default _默认样式">
                     <div id="u74_div" class=""></div>
                     <div id="u74_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -504,7 +504,7 @@
                   <div id="u77" class="ax_default _默认样式">
                     <div id="u77_div" class=""></div>
                     <div id="u77_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -548,7 +548,7 @@
                   <div id="u82" class="ax_default _默认样式">
                     <div id="u82_div" class=""></div>
                     <div id="u82_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -572,7 +572,7 @@
                   <div id="u85" class="ax_default _默认样式">
                     <div id="u85_div" class=""></div>
                     <div id="u85_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -616,7 +616,7 @@
                   <div id="u90" class="ax_default _默认样式">
                     <div id="u90_div" class=""></div>
                     <div id="u90_text" class="text ">
-                      <p style="font-size:14px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:16px;"></span><span style="font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;"> 统计分析</span></p>
+                      <p style="font-size:14px;"><span style="font-family:'FontAwesome Regular', 'FontAwesome';font-weight:400;font-style:normal;font-size:16px;"></span><span style="font-family:'微软雅黑';font-weight:400;"> 统计分析</span></p>
                     </div>
                   </div>
 
@@ -656,7 +656,7 @@
                   <div id="u95" class="ax_default _默认样式">
                     <div id="u95_div" class=""></div>
                     <div id="u95_text" class="text ">
-                      <p style="font-size:20px;"><span style="font-family:'FontAwesome';font-weight:400;"></span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">&nbsp; 账户设置</span></p>
+                      <p style="font-size:20px;"><span style="font-family:'FontAwesome';font-weight:400;font-style:normal;"></span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">&nbsp; 账户设置</span></p>
                     </div>
                   </div>
 
@@ -664,7 +664,7 @@
                   <div id="u96" class="ax_default _默认样式">
                     <div id="u96_div" class=""></div>
                     <div id="u96_text" class="text ">
-                      <p style="font-size:20px;"><span style="font-family:'FontAwesome';font-weight:400;"></span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">&nbsp; 退出登录</span></p>
+                      <p style="font-size:20px;"><span style="font-family:'FontAwesome';font-weight:400;font-style:normal;"></span><span style="font-family:'微软雅黑';font-weight:400;font-size:14px;">&nbsp; 退出登录</span></p>
                     </div>
                   </div>
                 </div>
