--- a/教师查看课题详细.html
+++ b/教师查看课题详细.html
@@ -49,121 +49,121 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u243" class="ax_default _默认样式">
-        <div id="u243_div" class=""></div>
-        <div id="u243_text" class="text " style="display:none; visibility: hidden">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u285" class="ax_default _默认样式">
+        <div id="u285_div" class=""></div>
+        <div id="u285_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- footer (组合) -->
-      <div id="u244" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
+      <!-- footer (Group) -->
+      <div id="u286" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
 
-        <!-- Unnamed (矩形) -->
-        <div id="u245" class="ax_default _默认样式">
-          <img id="u245_img" class="img " src="images/登录界面/u21.svg"/>
-          <div id="u245_text" class="text ">
-            <p><span>Copyright © </span><a id="u246" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u247" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
+        <!-- Unnamed (Rectangle) -->
+        <div id="u287" class="ax_default _默认样式">
+          <img id="u287_img" class="img " src="images/登录界面/u21.svg"/>
+          <div id="u287_text" class="text ">
+            <p><span>Copyright © </span><a id="u288" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u289" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
           </div>
         </div>
       </div>
 
-      <!-- 灰色背景 (动态面板) -->
-      <div id="u248" class="ax_default" data-label="灰色背景">
-        <div id="u248_state0" class="panel_state" data-label="State1" style="">
-          <div id="u248_state0_content" class="panel_state_content">
+      <!-- 灰色背景 (Dynamic Panel) -->
+      <div id="u290" class="ax_default" data-label="灰色背景">
+        <div id="u290_state0" class="panel_state" data-label="State1" style="">
+          <div id="u290_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- Unnamed (顶部通栏) -->
 
-      <!-- 灰色背景 (动态面板) -->
-      <div id="u250" class="ax_default" data-label="灰色背景">
-        <div id="u250_state0" class="panel_state" data-label="State1" style="">
-          <div id="u250_state0_content" class="panel_state_content">
+      <!-- 灰色背景 (Dynamic Panel) -->
+      <div id="u292" class="ax_default" data-label="灰色背景">
+        <div id="u292_state0" class="panel_state" data-label="State1" style="">
+          <div id="u292_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
-      <!-- 线条 (动态面板) -->
-      <div id="u251" class="ax_default" data-label="线条">
-        <div id="u251_state0" class="panel_state" data-label="State1" style="">
-          <div id="u251_state0_content" class="panel_state_content">
+      <!-- 线条 (Dynamic Panel) -->
+      <div id="u293" class="ax_default" data-label="线条">
+        <div id="u293_state0" class="panel_state" data-label="State1" style="">
+          <div id="u293_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
-      <!-- 页面标题 (矩形) -->
-      <div id="u252" class="ax_default _默认样式" data-label="页面标题">
-        <div id="u252_div" class=""></div>
-        <div id="u252_text" class="text ">
+      <!-- 页面标题 (Rectangle) -->
+      <div id="u294" class="ax_default _默认样式" data-label="页面标题">
+        <div id="u294_div" class=""></div>
+        <div id="u294_text" class="text ">
           <p><span>教师课题管理</span></p>
         </div>
       </div>
-      <div id="u249" style="display:none; visibility:hidden;"></div>
+      <div id="u291" style="display:none; visibility:hidden;"></div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u253" class="ax_default label">
-        <div id="u253_div" class=""></div>
-        <div id="u253_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u295" class="ax_default label">
+        <div id="u295_div" class=""></div>
+        <div id="u295_text" class="text ">
           <p><span>课题描述：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u254" class="ax_default label">
-        <div id="u254_div" class=""></div>
-        <div id="u254_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u296" class="ax_default label">
+        <div id="u296_div" class=""></div>
+        <div id="u296_text" class="text ">
           <p><span>课题标题：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u255" class="ax_default _文本段落">
-        <div id="u255_div" class=""></div>
-        <div id="u255_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u297" class="ax_default _文本段落">
+        <div id="u297_div" class=""></div>
+        <div id="u297_text" class="text ">
           <p><span style="color:#000000;">1.&nbsp; &nbsp;&nbsp; 依据人员和任务安排修正你们的WBS，将你们的WBS用项目管理软件管理起来，并依照WBS修改你们的软件开发计划和文档。然后开始实施你们的项目。</span></p><p><span style="color:#000000;">2.&nbsp; &nbsp;&nbsp; 从下周起，小组成员每人根据自己安排的任务开展工作，将自己的任务进度更新到项目管理工具。项目任务分配尽量独立，以便每个人负责自己的网页部分。</span></p><p><span style="color:#000000;">3.&nbsp; &nbsp;&nbsp; 项目组长或组员在你小组的项目管理软件中更新你小组项目任务的完成情况，每周形成一个甘特图，展示你小组的项目当前完成情况。</span></p><p><span style="color:#000000;">4.&nbsp; &nbsp;&nbsp; 11月26日演示项目必须完成所有页面及页面之间的迁移。页面内容不需要完整，但是应该能按照项目整个流程能展示完整。以待最后一周完成。</span></p><p><span style="color:#000000;">5.&nbsp; &nbsp;&nbsp; 项目配置管理的内容。小组成员建立github账号，每个小组成员。组长在github上建立项目，在项目设立三个分支，developing,draft和release。每个小组将自己负责的部分用Axure生成网页后，将html部分提交到github项目的开发分支上，最终小组负责配置管理的合并到release分支。（部分内容需要自学，如果不能在3个分支上工作，就在master分支上工作）</span></p><p><span style="color:#000000;">注意：有些小组一开始定义的功能太多，可能需要砍掉一些不必要的功能</span></p><p><span style="color:#000000;">第14周，中期检查，各项目以ppt汇报自己的进展情况（包括由项目管理工具生成的项目当前的进展，前2周每个人的工作）。同时演示自己的项目。Axure可以导出成html格式的文件。</span></p><p><span><br></span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u256" class="ax_default label">
-        <div id="u256_div" class=""></div>
-        <div id="u256_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u298" class="ax_default label">
+        <div id="u298_div" class=""></div>
+        <div id="u298_text" class="text ">
           <p><span>课题1</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u257" class="ax_default label">
-        <div id="u257_div" class=""></div>
-        <div id="u257_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u299" class="ax_default label">
+        <div id="u299_div" class=""></div>
+        <div id="u299_text" class="text ">
           <p><span>结束时间：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u258" class="ax_default label">
-        <div id="u258_div" class=""></div>
-        <div id="u258_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u300" class="ax_default label">
+        <div id="u300_div" class=""></div>
+        <div id="u300_text" class="text ">
           <p><span>2019-11-30</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u259" class="ax_default primary_button">
-        <div id="u259_div" class=""></div>
-        <div id="u259_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u301" class="ax_default primary_button">
+        <div id="u301_div" class=""></div>
+        <div id="u301_text" class="text ">
           <p><span>修改</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u260" class="ax_default primary_button">
-        <div id="u260_div" class=""></div>
-        <div id="u260_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u302" class="ax_default primary_button">
+        <div id="u302_div" class=""></div>
+        <div id="u302_text" class="text ">
           <p><span>返回</span></p>
         </div>
       </div>
