--- a/教师开设课题.html
+++ b/教师开设课题.html
@@ -49,117 +49,117 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u339" class="ax_default _默认样式">
-        <div id="u339_div" class=""></div>
-        <div id="u339_text" class="text " style="display:none; visibility: hidden">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u381" class="ax_default _默认样式">
+        <div id="u381_div" class=""></div>
+        <div id="u381_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- footer (组合) -->
-      <div id="u340" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
+      <!-- footer (Group) -->
+      <div id="u382" class="ax_default" data-label="footer" data-left="0" data-top="672" data-width="1100" data-height="100">
 
-        <!-- Unnamed (矩形) -->
-        <div id="u341" class="ax_default _默认样式">
-          <img id="u341_img" class="img " src="images/登录界面/u21.svg"/>
-          <div id="u341_text" class="text ">
-            <p><span>Copyright © </span><a id="u342" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u343" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
+        <!-- Unnamed (Rectangle) -->
+        <div id="u383" class="ax_default _默认样式">
+          <img id="u383_img" class="img " src="images/登录界面/u21.svg"/>
+          <div id="u383_text" class="text ">
+            <p><span>Copyright © </span><a id="u384" class="link" title="点击打开www.AxureUX.com"><span>www.AxureUX.com</span></a><span>, All Rights Reserved.</span></p><p><span>Email : 0000000</span><a id="u385" class="link" title="点击发送邮件"><span>@qq.com</span></a><span>&nbsp; QQ: 000000</span></p>
           </div>
         </div>
       </div>
 
-      <!-- 灰色背景 (动态面板) -->
-      <div id="u344" class="ax_default" data-label="灰色背景">
-        <div id="u344_state0" class="panel_state" data-label="State1" style="">
-          <div id="u344_state0_content" class="panel_state_content">
+      <!-- 灰色背景 (Dynamic Panel) -->
+      <div id="u386" class="ax_default" data-label="灰色背景">
+        <div id="u386_state0" class="panel_state" data-label="State1" style="">
+          <div id="u386_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
       <!-- Unnamed (顶部通栏) -->
 
-      <!-- 灰色背景 (动态面板) -->
-      <div id="u346" class="ax_default" data-label="灰色背景">
-        <div id="u346_state0" class="panel_state" data-label="State1" style="">
-          <div id="u346_state0_content" class="panel_state_content">
+      <!-- 灰色背景 (Dynamic Panel) -->
+      <div id="u388" class="ax_default" data-label="灰色背景">
+        <div id="u388_state0" class="panel_state" data-label="State1" style="">
+          <div id="u388_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
-      <!-- 线条 (动态面板) -->
-      <div id="u347" class="ax_default" data-label="线条">
-        <div id="u347_state0" class="panel_state" data-label="State1" style="">
-          <div id="u347_state0_content" class="panel_state_content">
+      <!-- 线条 (Dynamic Panel) -->
+      <div id="u389" class="ax_default" data-label="线条">
+        <div id="u389_state0" class="panel_state" data-label="State1" style="">
+          <div id="u389_state0_content" class="panel_state_content">
           </div>
         </div>
       </div>
 
-      <!-- 页面标题 (矩形) -->
-      <div id="u348" class="ax_default _默认样式" data-label="页面标题">
-        <div id="u348_div" class=""></div>
-        <div id="u348_text" class="text ">
+      <!-- 页面标题 (Rectangle) -->
+      <div id="u390" class="ax_default _默认样式" data-label="页面标题">
+        <div id="u390_div" class=""></div>
+        <div id="u390_text" class="text ">
           <p><span>教师课题管理</span></p>
         </div>
       </div>
-      <div id="u345" style="display:none; visibility:hidden;"></div>
+      <div id="u387" style="display:none; visibility:hidden;"></div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u349" class="ax_default label">
-        <div id="u349_div" class=""></div>
-        <div id="u349_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u391" class="ax_default label">
+        <div id="u391_div" class=""></div>
+        <div id="u391_text" class="text ">
           <p><span>还可以开设3个课题</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u350" class="ax_default label">
-        <div id="u350_div" class=""></div>
-        <div id="u350_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u392" class="ax_default label">
+        <div id="u392_div" class=""></div>
+        <div id="u392_text" class="text ">
           <p><span>课题标题：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (文本框) -->
-      <div id="u351" class="ax_default text_field">
-        <div id="u351_div" class=""></div>
-        <input id="u351_input" type="text" value="" class="u351_input"/>
+      <!-- Unnamed (Text Field) -->
+      <div id="u393" class="ax_default text_field">
+        <div id="u393_div" class=""></div>
+        <input id="u393_input" type="text" value="" class="u393_input"/>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u352" class="ax_default primary_button">
-        <div id="u352_div" class=""></div>
-        <div id="u352_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u394" class="ax_default primary_button">
+        <div id="u394_div" class=""></div>
+        <div id="u394_text" class="text ">
           <p><span>确认</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u353" class="ax_default label">
-        <div id="u353_div" class=""></div>
-        <div id="u353_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u395" class="ax_default label">
+        <div id="u395_div" class=""></div>
+        <div id="u395_text" class="text ">
           <p><span>结束时间：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (文本框) -->
-      <div id="u354" class="ax_default text_field">
-        <div id="u354_div" class=""></div>
-        <input id="u354_input" type="text" value="" class="u354_input"/>
+      <!-- Unnamed (Text Field) -->
+      <div id="u396" class="ax_default text_field">
+        <div id="u396_div" class=""></div>
+        <input id="u396_input" type="text" value="" class="u396_input"/>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u355" class="ax_default label">
-        <div id="u355_div" class=""></div>
-        <div id="u355_text" class="text ">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u397" class="ax_default label">
+        <div id="u397_div" class=""></div>
+        <div id="u397_text" class="text ">
           <p><span>课题内容：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (文本域) -->
-      <div id="u356" class="ax_default text_area">
-        <div id="u356_div" class=""></div>
-        <textarea id="u356_input" class="u356_input"></textarea>
+      <!-- Unnamed (Text Area) -->
+      <div id="u398" class="ax_default text_area">
+        <div id="u398_div" class=""></div>
+        <textarea id="u398_input" class="u398_input"></textarea>
       </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
